Added Senia's Advice

--- a/index.html
+++ b/index.html
@@ -92,6 +92,7 @@
         <a href="advice/Denise-Lanay-advice.html" target="blank">Denise's Sage Advice</a><br>
         <a href="advice/tiffany-amani-advice.html" target="blank">Tiffany's Advice</a><br>
 	      <a href="advice/joan-fowler-advice.html" target="blank">Joan's Advice</a><br>
+        <a href="advice/senia-n-advice.html" target="blank">Senia's Advice</a><br>
     </section>
 
   </body>
